Added deleteQuestionById and getAllQuestions (admin page)
